--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -47,12 +47,13 @@
             <TextView android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textColor="#372c24"
-                android:text="Email"/>
+                android:text="Username"/>
             <EditText android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dip"
                 android:layout_marginBottom="20dip"
-                android:singleLine="true"/>
+                android:singleLine="true"
+                android:id="@+id/uname"/>
             <!-- Password Label -->
             <TextView android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -62,9 +63,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dip"
                 android:singleLine="true"
-                android:password="true"/>
+                android:password="true"
+                android:id="@+id/pword"/>
             <!-- Login button -->
-            <Button android:id="@+id/btnLogin"
+            <Button android:id="@+id/login"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dip"
@@ -79,6 +81,13 @@
                 android:gravity="center"
                 android:textSize="20dip"
                 android:textColor="#0b84aa"/>
+            <TextView
+           	    android:layout_width="fill_parent"
+           	    android:layout_height="56dp"
+                android:id="@+id/loginErrorMsg"
+                android:textColor="#000000"
+                android:layout_below="@+id/link_to_register"
+                android:layout_alignParentLeft="true"/>
         </LinearLayout>
         <!-- Login Form Ends -->
         
