--- a/res/layout/collect_stamp.xml
+++ b/res/layout/collect_stamp.xml
@@ -26,10 +26,44 @@
 	android:id="@+id/img"
 	/>
 	 <TextView
-        android:id="@+id/text"
+        android:id="@+id/title"
         android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:textSize="20sp"/>
+		android:textSize="30sp"/>
+	 <TextView
+		        android:id="@+id/text_short_description"
+		        android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:textSize="20sp"/>
+	 <TableLayout android:layout_width="fill_parent"
+   		android:layout_height="fill_parent"
+   		android:id="@+id/table">
+   		
+		     <TableRow
+		        android:id="@+id/tableRow1"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:padding="5dip" >
+	 
+	         <TextView
+		        android:id="@+id/url"
+		        android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:textSize="20sp"/>
+	          <TextView
+		        android:id="@+id/text_url"
+		        android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:textSize="20sp"/>
+	   		</TableRow>
+
+	 </TableLayout>
+	 <TextView
+		 android:id="@+id/text_description"
+		 android:layout_width="wrap_content"
+		 android:layout_height="wrap_content"
+		 android:textSize="20sp"/>
+
 	 	
 
 	 <LinearLayout
